--- a/YungchingDemo.csproj
+++ b/YungchingDemo.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.12" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DataLayer\" />
+    <Folder Include="BusinessLayer\" />
+  </ItemGroup>
+
 </Project>
