CRUD  Function and Layout Fixed

--- a/YungchingDemo.csproj
+++ b/YungchingDemo.csproj
@@ -1,8 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <CopyRefAssembliesToPublishDirectory>false</CopyRefAssembliesToPublishDirectory>
+    <UserSecretsId>80b31ceb-76b1-43c0-b050-3bf8cf302af5</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
